[[De Kuunder]] → [[De Kuunder (Stienwiekerlaand)|De Kuunder]] (dat is [[De Kuunder (Stienwiekerlaand)]])

--- a/Oaveriessels.mw
+++ b/Oaveriessels.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Oaveriessels.PNG|right|300px|thumb|Indieling van 't Oaveriessels deur Harrie Scholtmeijer]]
+[[Ofbeelding:Oaveriessels.PNG|right|thumb|Indieling van 't Oaveriessels deur Harrie Scholtmeijer]]
 't '''Oaveriessels''' is een verzamelname veur de [[Nedersaksisch]]e dialecten die as ze in de pervincie [[Oaveriessel]] praot. Dizze verzameling vörmt gien ienheid, mar bestiet uut een antal dialectgroepen binnen 't Nedersaksisch. Verschillende dialectologen hebt verschillende indielings emeuken.
 
 ==Scholtmeijer zien indieling==
@@ -7,7 +7,7 @@ Taalkundige [[Harrie Scholtmeijer]] meuk een indieling ('de zeuven zusters')<ref
 Hieronder hej een beschrieving van de zeuven zusters. De veurbieldzinnen laot zien det de dialecten uut dichtbi'j mekaar elegen plaatsen vake kenmarken dielt, al wördt heur dialecten töt verschillende groepen erekend. De indielings bint ja ok mar kunstmaotig.
 
 ===Dialecten van De Kuunder, Blankenham en Blokziel===
-De dialecten van [[De Kuunder]], [[Blankenham]] en [[Blokziel]] zöt Scholtmeijer as butenbienties binnen 't Nedersaksisch, vanwegens de wisselwarkings die ze ondergaon hebt mit 't [[Hollaans (dialect)|Hollaans]]. In de [[Tachtigjaorige Oorlog]] wördden Blokziel een [[Hollaand]]se uutvalsstee.
+De dialecten van [[De Kuunder (Stienwiekerlaand)|De Kuunder]], [[Blankenham]] en [[Blokziel]] zöt Scholtmeijer as butenbienties binnen 't Nedersaksisch, vanwegens de wisselwarkings die ze ondergaon hebt mit 't [[Hollaans (dialect)|Hollaans]]. In de [[Tachtigjaorige Oorlog]] wördden Blokziel een [[Hollaand]]se uutvalsstee.
 
 Kenmarken van dizze dialecten bint:
 * Woorden die in 't oaverige Nedersaksisch ''o{{small()|o}}l'' of ''al'' hebt - ''zo{{small()|o}}lt, ho{{small()|o}}lt, ik zolle'' - hebt in de dialecten van dizze plaatsen de [[Hollaans (dialect|Hollaanse]] diftong ''ou'' oaver-eneumen: ''zout, hout, ik zou'', en mangs nog wieder evoerd: ''zouder'' (zolder).
@@ -121,7 +121,7 @@ Ofwiekende kenmarken bint:
 De huse hebt ne go-ete van grune vaaive. Ne vraauwe hef zalt waeter uut n kjättel in een bakkie of pöttie edwoan. ''('t Vjenne)''
 
 ==Oldere indielings==
-[[Ofbeelding:JacvanGinneken.jpg|thumbnail|300px|Fragment van Jac. van Ginneken zien dialectkaorte (1928)]]
+[[Ofbeelding:JacvanGinneken.jpg|thumb|upright|Fragment van Jac. van Ginneken zien dialectkaorte (1928)]]
 ===Jac. van Ginneken===
 De taalkundige Jac. van Ginneken (1877-1945) hef op zien 'Overzichtskaart der Nederlandsche dialecten' 't Oaveriessels in-edield in vier 'Saksische' dialectgroepen: 't Stellingwarfs, 't Gelders-Oaveriessels, 't Drèents en 't dialect van 't Vjenne.<ref>Dr. Jac. van Ginneken s.j. (1928). ''Handboek der Nederlandsche Taal, Deel I, De sociologische structuur der Nederlandsche taal I.'' Twiede drok. 's-Hertogenbosch: L.C.G. Malmberg.</ref>
 *'t [[Stellingwarfs]] löp op de kaorte van Van Ginneken een stok wieder umdeel as volngs de mieste indielings; töt veurbi'j [[Stappest]], [[Kampen (Overiessel)|Kampen]] en [[Zwolle]] en zölfs in een puntien van de [[Veluwe]] in [[Gelderlaand]] ([[Elburg]]). Miestentied wördt in Oaveriessel allennig 't noorden van de Kop van Oaveriessel as Stellingwarfstalig eziene, umdej daor in een bulte woorden de Stellingwarfse ''ae''-klaank hebt (''waeter, raem, tael''), waoraj in de rest van de Kop en daoronder ([[Venó]], [[De Sluus]], [[Stappest]]) een ''aa''-klaank hebt (''water, raam, taal'').<ref>Op 'e [http://www.stellingwarfs.nl/pictures/taalkaart2.jpg kaorte van de Stichting Stellingwarver Schrieversronte] giet 't Stellingwarfs niet wieder hen 't zuden as eêm boaven Wannepervene.</ref> (Wal hej nog zo zudelijk as Kampen, krek as in Stellingwarf, een uutzundering op 't [[Saksisch ienheidsmeervold]].) Ok in [[Frieslaand]] en [[Drenthe]] wik Van Ginneken zien plaatsing van 't Stellingwarfs slim of van 't gebrukelijke teengwoordige plaotien ('t beslat veur hum zölfs 't westelijkste diel van de pervincie [[Grunnen (provìnzie)|Grunning]]).
