--- a/Westhoekers.mw
+++ b/Westhoekers.mw
@@ -1,6 +1,6 @@
 Et '''Westhoekers''' is de naeme veur een dialect van et [[Stellingwarfs]] dat ze praoten in de zuudwestpunt van de gemiente [[Weststellingwarf]], in 't zuudoosten van [[Frieslaand]]. De plakken waor ze Westhoekers praoten bin [[Spange]], [[Sliekenborg]], [[Scharpenzeel (Frieslaand)|Scharpenzeel]] en [[De Langelille]].
 
-Disse vorm van et Stellingwarfs liekt nog aorig veul op de dialekten van de [[Oaveriessel|Overiesselse]] plakken [[De Kuunder]] en [[Blankenham]], die niet veerof liggen. Bi'jtieden numen ze in [[Stellingwarf]] 't dialekt van disse Overiesselse plakken ok Westhoekers.
+Disse vorm van et Stellingwarfs liekt nog aorig veul op de dialekten van de [[Oaveriessel|Overiesselse]] plakken [[De Kuunder (Stienwiekerlaand)|De Kuunder]] en [[Blankenham]], die niet veerof liggen. Bi'jtieden numen ze in [[Stellingwarf]] 't dialekt van disse Overiesselse plakken ok Westhoekers.
 
 ==Bron==
 *[[Harrie Scholtmeijer]] (2006). ''Mörn! Taalgids Overijssel''. Assen: In Boekvorm Uitgevers, bv.
