--- a/Nedersaksisch_B.mw
+++ b/Nedersaksisch_B.mw
@@ -921,9 +921,9 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit B begunt''' oet 't [[Neders
 **''ulk'' (ook broekt om t Nederlaandse ''bah!'' oet te drokken)
 **''bunzel'' (ook broekt veur aine dij stinkt)
 **''mud''
-*[[Stellingwarfs]]: 
+*[[Stellingwarfs]]:
 **''beuzeling'' (algemien)
-**''mudde'' ([[Ooldemark]] en [[De Kuunder]])
+**''mudde'' ([[Ooldemark]] en [[De Kuunder (Stienwiekerlaand)|De Kuunder]])
 **''beuzik'' ([[Gieteren]])
 | valign="top" |
 *[[Veluws]]: 
