[[De Kuunder]] → [[De Kuunder (Stienwiekerlaand)|De Kuunder]] (dat is [[De Kuunder (Stienwiekerlaand)]])

--- a/Ulk.mw
+++ b/Ulk.mw
@@ -56,7 +56,7 @@ De ulk is [[endemie (biogeografie)|endemisch]] veur [[Europa (continent)|Europa]
 **''mud''
 *[[Stellingwarfs]]: 
 **''beuzeling'' (algemien)
-**''mudde'' ([[Ooldemark]] en [[De Kuunder]])
+**''mudde'' ([[Ooldemark]] en [[De Kuunder (Stienwiekerlaand)|De Kuunder]])
 **''beuzik'' ([[Gieteren]])
 *[[Veluws]]: 
 **''bunzing''
