--- a/Gorkum.mw
+++ b/Gorkum.mw
@@ -1,10 +1,10 @@
 {{Gemeante |
-naam = Gorkem |
+naam = Korinkem |
 bestaandsnaam vlagge = Gorinchem flag outline.png |
 bestaandsnaam woapn = Wapen_gorinchem.gif |
 lokatie = LocatieGorinchem |
 proveensie = [[Flag Zuid-Holland.svg|20px]] [[Zuud-Hollaand]] |
-heufdplaats = '''Gorkem''' |
+heufdplaats = '''Korinkem''' |
 öppervlakte = 21,99 |
 öppervlakte laand = 18,96 |
 öppervlakte water = 3,03 |
@@ -18,16 +18,16 @@ netnummer = 0183 |
 postkode = 4200-4207 |
 webstie = [http://www.gorinchem.nl/ www.gorinchem.nl] |
 }}
-'''Gorkem''' ([[Nederlaands]]: ''Gorinchem'') is ne [[Stad (woonstee)|stad]] en gemeente in de Nederlandse previnsie [[Zuud-Hollaand]]. Op ne oppervlaakte van 22,01 km² (woarvan 3,23 km² water). [[Dalem (Zuud-Hollaand)|Dalem]] beheurt ok tot de gemeente Gorkem. In et centrum van Gorkem ligt den good bewoarden [[vesten|veste]]. 
+'''Korinkem''' ([[Nederlaands]]: ''Gorinchem'') is ne [[Stad (woonstee)|stad]] en gemeente in de Nederlandse previnsie [[Zuud-Hollaand]]. Op ne oppervlaakte van 22,01 km² (woarvan 3,23 km² water). [[Dalem (Zuud-Hollaand)|Dalem]] beheurt ok tot de gemeente Korinkem. In et centrum van Korinkem ligt den good bewoarden [[vesten|veste]]. 
 
 == Geskiednis ==
-Zi-j goat doarvan uut dat Gorkem is ontstoan deordat vissers en boern rundumme et joar [[1000]] ne [[neaderzetting]] stichtten op wat heuger eleagen laand noabi-j ne munding van den [[Linge]] in den [[Merwede]]. Gorkem ("Goriks Heem") wödden et eerst eneumd in n skrift uut [[1224]] woarin [[Floris IV]] de 'Gorcumers' den tolvri-jdom in et hele [[groafschap Hollaand]] bevestigden.
+Zi-j goat doarvan uut dat Korinkem is ontstoan deordat vissers en boern rundumme et joar [[1000]] ne [[neaderzetting]] stichtten op wat heuger eleagen laand noabi-j ne munding van den [[Linge]] in den [[Merwede]]. Korinkem ("Korinks Heem") wödden et eerst eneumd in n skrift uut [[1224]] woarin [[Floris IV]] de 'Koringers' den tolvri-jdom in et hele [[groafschap Hollaand]] bevestigden.
 
-Tussen [[1247]] en [[1267]] kwam Gorkem en umgeaving in et bezit van de [[heern Van Arkel]]. [[Otto van Arkel]] verleenden Gorkem op 11 november [[1382]] [[stadsrechten]]. An et ende van de 13de eeuwe wodden rundumme de neaderzetting wallen ebouwd dee verstarkt waren met ne mure van pöale, dit um de stad te beschermen teggen de oaverheersing van de noaberstoaten [[Hollaand]] en [[Gelre]]. Halverweage de 14de eeuwe wödden de wallen wieter verstarkt met steenn [[Stadsmure|muurn]] woar 7 poorten in zaten en 23 toorns woardeur nen echten stadswal ontstoand. 
+Tussen [[1247]] en [[1267]] kwam Korinkem en umgeaving in et bezit van de [[heern Van Arkel]]. [[Otto van Arkel]] verleenden Korinkem op 11 november [[1382]] [[stadsrechten]]. An et ende van de 13de eeuwe wodden rundumme de neaderzetting wallen ebouwd dee verstarkt waren met ne mure van pöale, dit um de stad te beschermen teggen de oaverheersing van de noaberstoaten [[Hollaand]] en [[Gelre]]. Halverweage de 14de eeuwe wödden de wallen wieter verstarkt met steenn [[Stadsmure|muurn]] woar 7 poorten in zaten en 23 toorns woardeur nen echten stadswal ontstoand. 
 
-Doarnoa was et de beurte van de [[Watergeuzen]] um de stad te veroaveren. Op 9 juli [[1572]] namen zie 19 priesters en brooders gevangen (umdat zi-j in eur geleuf volheelden) dee in ne turfschoppe buten Den Briel (Brielle) wodden op-ehongen. Dizze geesteleken gingen de geskiednis in as de [[marteloaren van Gorkem]]. In et [[Gorkems Museum]] hunk n skilderi-j ter noagedachtenis an dizze gebeurtenis.
+Doarnoa was et de beurte van de [[Watergeuzen]] um de stad te veroaveren. Op 9 juli [[1572]] namen zie 19 priesters en brooders gevangen (umdat zi-j in eur geleuf volheelden) dee in ne turfschoppe buten Den Briel (Brielle) wodden op-ehongen. Dizze geesteleken gingen de geskiednis in as de [[marteloaren van Korinkem]]. In et [[Korinkems Museum]] hunk n skilderi-j ter noagedachtenis an dizze gebeurtenis.
 
-In de 16de eeuwe waren de stadsmuurn zo zwak dat zi-j wodden vervangen deur nen ni-jen vestingwal met 11 [[bastion]]s, dee vandage nog bi-jnoa helemoal anwezzig bunt. Den ni-jen wal kwam in 1609 kloar en lag nen stuk wieter van et centrum woardeur de stad twee keer zo groot wierd. In 1673 wierd Gorkem op-enommen in de (olde) [[Hollandse Waterliene]].
+In de 16de eeuwe waren de stadsmuurn zo zwak dat zi-j wodden vervangen deur nen ni-jen vestingwal met 11 [[bastion]]s, dee vandage nog bi-jnoa helemoal anwezzig bunt. Den ni-jen wal kwam in 1609 kloar en lag nen stuk wieter van et centrum woardeur de stad twee keer zo groot wierd. In 1673 wierd Korinkem op-enommen in de (olde) [[Hollandse Waterliene]].
 
 Noa de [[Golden Eeuwe]] kwam in de 18de eeuwe de tröggang. Toon de Franse ovverheersing weerumme leep, verschansten den trögtrekkende Fraanse tröppen zich in den veste. Noa dree moanden beleagerd te wean, gaven zi-j zich oaver. De stad was echter zwoar beschoadigd. Deur den opkomst van de industrie krabbelden Gorkem wier uut et dal en den bouw van stoomskeepn leidde tot meer slöpvoart. Der wodden knaaln gegroaven veur ne bettere deurvoart en der kwam ne spoorliene woardeur de stad better bereikboar wodden. Et antal inwonners nam too en dizzen bleuj zörgden doarveur dat de binnenstad zo volle raken dat der buten den wal huze bouwd mossen wodden.
 
@@ -35,13 +35,13 @@ Noa de [[Golden Eeuwe]] kwam in de 18de eeuwe de tröggang. Toon de Franse ovver
 Anvang 20ste eeuwe vond de eerste uutbreiding plaatse in de Lingewiek en West. Noa den Krieg wodden uutbreiding zocht in et noordwesteleke deel van de gemeente. In de joaren 70 kump dee uutbreiding kloar woarnoa de stad in oosteleke richting wieter bouwden an de ni-je wiek Wiedskild. In 1985 begun de untwikkeling in oosteleke richting met et stadsdeel Laeg Dalem. Ok greujden de stad deurdat in 1986 den kern Dalem as gevolg van et gemeenteleken samengoan too-evoegd wodden.
 
 == Film en tv ==
-In Gorkem bunt verskeiden films/ tv-programma's op-enommen. In de joaren 70 wodden doar de tv-riege [[Waaldrecht]] op-enommen. Den kinderfilm [[De tasjesdief]] is grotendeels op de grote markt en in verskillende kleine steggen filmd. 
+In Korinkem bunt verskeiden films/ tv-programma's op-enommen. In de joaren 70 wodden doar de tv-riege [[Waaldrecht]] op-enommen. Den kinderfilm [[De tasjesdief]] is grotendeels op de grote markt en in verskillende kleine steggen filmd. 
 
 == Uutgoande verwiezingen ==
-* [http://www.gorinchem.nl Webstea Gemeente Gorkem]
-* [http://home.planet.nl/~veen0266 Archeologie in de gemeente Gorkem]
+* [http://www.gorinchem.nl Webstea Gemeente Korinkem]
+* [http://home.planet.nl/~veen0266 Archeologie in de gemeente Korinkem]
 * [http://www.gorinchem-presenteert.nl/rondleiding.html Sjoksen deur de vestenstad]
-* [http://www.gorinchem.nl/museum Gorkems museum]
+* [http://www.gorinchem.nl/museum Korinkem museum]
 
 == Galleri-je ==
 <gallery>
@@ -55,29 +55,3 @@ Ofbeelding:Gorinchem_stadswalle.jpg|Stadswal
 [[Kattegerie:Achterhooks artikel]]
 [[Kattegerie:Gemeente in Zuud Hollaand]]
 [[Kattegerie:Plaotse in Zuud Hollaand]]
-
-[[bg:Горинхем]]
-[[ca:Gorinchem]]
-[[de:Gorinchem]]
-[[el:Χόρινχεμ]]
-[[en:Gorinchem]]
-[[eo:Gorinchem]]
-[[es:Gorinchem]]
-[[fr:Gorinchem]]
-[[fy:Garkum]]
-[[id:Gorinchem]]
-[[it:Gorinchem]]
-[[ja:ホルクム]]
-[[jv:Gorinchem]]
-[[ko:호린험]]
-[[la:Goricum]]
-[[li:Gorinchem]]
-[[ms:Gorinchem]]
-[[nl:Gorinchem]]
-[[pl:Gorinchem]]
-[[ro:Gorinchem]]
-[[ru:Горинхем]]
-[[sv:Gorinchem]]
-[[vi:Gorinchem]]
-[[vo:Gorinchem]]
-[[war:Gorinchem]]
