--- a/Over-Ysselsche_Boere-Vryagie.mw
+++ b/Over-Ysselsche_Boere-Vryagie.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Vryagie.JPG|right|400px|thumb|Begun van de ''Over-Ysselsche Boere-Vryagie'', uut ''Niederdeutsche Bauernkomödien'' (Jellinghaus, 1880). Titel en tenielanwiezings zoas 'Eerste bedrijf' bint in 't Nederlaands.]]
+[[Ofbeelding:Over-Ysselsche Boere-Vryagie 1641.jpg|right|250px|thumb|Veurziede van de ''Over-Ysselsche Boere-Vryagie'', edrokt bi'j Joost Broersz in Amsterdam, 1641. De veurziede is in 't Nederlaands, want veur een westers publiek bedoeld.]]
 De '''Over-Ysselsche Boere-Vryagie''' is een [[klucht|boerenklucht]] uut de eerste helfte van de [[17e eeuw]], deur een niet enuumde schriever eschreven in Zuud-[[Sallaands]] dialect (waorschienlijk 't [[Dèventers]]). 't Is 't ienige wark in zien soort in 't [[Nedersaksisch]] van [[Nederlaand]] van veur de 19e eeuw, mit de meugelke uutzundering van de klucht [[Lukevent]] (uut de [[Achterhoek]] of 't [[Westfaolen|Westfaolse]] grèensgebied). 't Is ok de belangriekste veur-19e-eeuwse weergave van een [[Oaveriessel]]s dialect.
 
 ==Inhold==
@@ -11,6 +11,7 @@ Mar as de femilies mekare bekend maakt wat ze van plan bint heur zeun en dochter
 Lubbert dreigt ''ten kriege'' (in 't leger) te gaon as hi'j Zwenne niet mag trouwen. De pastoor (domeneer) wördt d'rbi'j ehaald en löst mit zien netuurlijke gezag de stried op.
 
 ==Taal==
+[[Ofbeelding:Vryagie.JPG|right|400px|thumb|Begun van de ''Over-Ysselsche Boere-Vryagie'', uut ''Niederdeutsche Bauernkomödien'' (Jellinghaus, 1880). Titel en tenielanwiezings zoas 'Eerste bedrijf' bint in 't Nederlaands.]]
 De titel van de klucht situeert dizze in de pervincie Oaveriessel. De taalkundige en hooglerer Nedersaksisch [[Klaas Hanzen Heeroma|Klaas Heeroma]] mienden (1958) det de taal die de personages gebruukt (behalve de Hollaandsig praotende pastoor), wis op Dèventer en umgeving. Dit is de ienige umgeving daoras alle taalkenmarken te plaatsen bint. Vörmen as ''nich'' en ''hous'' (uutspraoke 'hoes') in plaatse van 't tegenswoordige Sallaands ''niet'' en ''huus'' kunt wiezen op een vrogger stadium van de taal.
 
 Heeroma besprek onder meer de veurnaamwoorden ''ons'' en ''u'' (uutspraoke 'oe'); voltooide dielwoorden mit prefix ''-e'' (''eworden'', ''eholpen''), 't [[Saksisch ienheidsmeervold]] (''se bint''), umlaut in de verkleinvörms (''eppelken'', ''vetken''), de verkleinvörm ''-ken'', en 't woordgebruuk.
