--- a/Oktober.mw
+++ b/Oktober.mw
@@ -48,6 +48,7 @@ Oktober geldt vanof de [[16e eeuw]] as rozenkransmaond.
 |	74	=	62,8
 }}
 
+{{Commonscat|October}}
 {{Maonden}}
 
 [[Kattegerie:Drèents artikel]]
