*Empty MediaWiki Message*

--- a/Leavensboom.mw
+++ b/Leavensboom.mw
@@ -2,5 +2,5 @@ De '''Leavensboum''', of '''Werldboum''', is een idey wat wy so beaty oaveral op
 
 Een andere is de [[Jegdrasiel|yggdrasil]] of de [[Irminsul|irminsûl]] uut de germaanske oldheid. Dissend was de wearldboum wår in as alle neagen wearlden med verbünden is. In de wörtels had y de underwearld en de leavensbrunne, en oaver verskillende takken de andere goaden- en geystenwearlden verdealet. Disse boum wörd vöär-esteld as een dennenboum, ümdat den in alle jårtyden altyd gröön blevt.
 
-{{Dialekt|sdz]]}}
+{{Dialekt|sdz}}
 [[Kategorie:Mythologie]]
