*Empty MediaWiki Message*

--- a/Paul_Gauguin.mw
+++ b/Paul_Gauguin.mw
@@ -1,11 +1,11 @@
-'''Eugène Henri Paul Gauguin''' (Parys, 7 jüny 1848 – Atuona op de Marquesaseylaandn, 9 meey 1903) was een vransen künstskilder. Syn skilderstyl wörd under et köppy [[Postimpressionisme|Postimpressionisme]] eset en et wark nå 1891 by [[Simbolisme]]. Hy wörd eaveneyns, nåst Van Gogh en [[Paul Cézanne]], as de vader van de [[moderne kunst|moderne künst]] eseen.
+'''Eugène Henri Paul Gauguin''' (Parys, 7 juni 1848 – Atuona up de Marquesaseelanden, 9 mei 1903) was een vransken künstskilder. Syn skilderstyl wörd under et köppyn [[Postimpressionisme|Postimpressionisme]] eset en et wark nå 1891 by [[Symbolisme]]. Hy wörd eaven-eyns, nåst Van Gogh en [[Paul Cézanne]], as de vader van de [[moderne kunst|moderne künst]] eseen.
 
 ==Leaven==
-So as et verhaal wil, had Gauguin een beste bane as böyrsmakelaar, had een vrouwe en wichter en leaven een good leaven in [[Kopenhagen]]. Mar hy gaven et allemåle up ümme up [[Fraankriek|Vrankryk]], [[Paries|Parys]], an te gån en dår vöär de skilderkünst te gån leaven.  
+So as et verhaal wil, had Gauguin een beste bane as böärsmakelaar, had een vrouwe en kinder en leaven een good leaven in [[Kopenhagen]]. Mar hy gaven et allemåle up ümme up [[Fraankriek|Vrankryk]], [[Paries|Parys]], an te gån en dår vöär de skilderkünst te gån leaven.  
 
-Tydens syn leaven was hy al een bekenden by de junge skilders in Vrankryk. In verskeidene grupen was hy een soort guru vöär ear. In [[Pont-Aven]], [[Bretagne]], had hy een skildersgruup. Ene van syn fans was [[Vincent van Gogh]], wår as hy (med andringen van [[Theo van Gogh]]) en settyn med samen eleaved hevt. Dit hevt uutendelik töt een dikke rüsy ekummen, wårnå Van Gogh in een unwyse büie syn eigen oor der ofsneaden. 
+Tydens syn leaven was hy al een bekenden by de junge skilders in Vrankryk. In verskeidene gruppen was hy een soort guru vöär hün. In [[Pont-Aven]], [[Bretagne]], had hy een skildersgrup. Eyne van syn fans was [[Vincent van Gogh]], wår as hy (med andringen van [[Theo van Gogh]]) en settyn med samen eleaved hevt. Dit hevt uutendelik töt een dikke rüsy ekummen, wårnå Van Gogh in een unwyse büie syn eigen oare der ofsneaden. 
 
-Gauguin güng op Tahiti an, ümme dår (achterof eseen) syn beste wark te maken. Hy söchten en verbeylden dår et püre en primityve leaven van de oorsprüngelike bewoaners dårsoot. Med vöäle inspiraty van de inheymse godsdeenstige gebruken en verhalen. Ouk al waren sy dår al vlink an et verwesteren. Hy hevt noch eyne mål når Parys ewesd, maar kreygen toon geyn erkenning van syn Tahiti-warken. Toon hy wear geld espåred had was hy wearümme egån når de eilanden. Dår is hy ouk uut de tyd ekummen döär sülvmoordpogings, drank en uutendelik döär een geslächtsseekte.
+Gauguin güng op Tahiti an, ümme dår (achterof eseen) syn beste wark te maken. Hy söchten en verbealdden dår et püre en primitive leaven van de oorsprüngelike bewoaners dårsoot. Med vöäle inspiraty van de inheymske godsdeenstige gebruken en verhalen. Ouk al waren sy dår al vlink an et verwesteren. Hy hevt noch eyne mål når Parys ewesd, mar kreagen toon geyn erkenning van syn Tahiti-warken. Toon hy wear geld espård had was hy wearümme egån når de eilanden. Dår is hy ouk uut de tyd ekummen döär sülvmoordpögings, drank en uutendelik döär een geslächtsseekte.
 
 
 
