*Empty MediaWiki Message*

--- a/Samhain.mw
+++ b/Samhain.mw
@@ -1,4 +1,4 @@
-'''Samhain''' (uutsprake: /ˈsˠaunʲ/, /ˈsavɯɲ/, saunj, in yrsk lettertype vake ''Saṁain'') is et [[Kelten (volk)|keltiske]] nyjårsfeest dat up de åvend van 31 oktober begünden. Mar de kelten hadden wal een yts andere kalender as wattet wy nu hebbet, düs et sol manks misskyn yts verskillen. Der wördden et ende van et [[zoemer|summer]] evyred en et [[winter]] in elüded. Groute vüren wördden der disse åvend an estöäken. 
+'''Samhain''' (uutsprake: /ˈsˠaunʲ/, /ˈsavɯɲ/, saunj, in yrsk lettertype vake ''Saṁain'') is et [[Kelten (volk)|keltiske]] nyjårsfeest dat up de åvend van 31 oktober begünden. Mar de kelten hadden wal een yts andere kalender as wattet wy nu hebbet, düs et sol manks misskyn yts verskilled hebben. Der wördden et ende van et [[zoemer|summer]] evyred en et [[winter]] in elüded. Groute vüren wördden der disse åvend an estöäken. 
 
 Vöär de kelten begünden alles vanuut et düüster. Ear dagen begünden as de sünne under güng. So ouk begünden ear nye jår by Samhain, want nu bint de dagen up syn körtenst. Up disse åvend gelöyveden de kelten, asset wy de myten nåleast, dat de geystenwearld en unse wearld et körtst by mekander was, düs was et heyl makkelik ümme med de douden te pråten en ear te huus een stool te geaven. 
 
