--- a/Samhain.mw
+++ b/Samhain.mw
@@ -1,6 +1,6 @@
 '''Samhain''' (uutsprake: /ˈsˠaunʲ/, /ˈsavɯɲ/, saunj, in yrsk lettertype vake ''Saṁain'') is et [[Kelten (volk)|keltiske]] nyjårsfeest dat up de åvend van 31 oktober begünden. Mar de kelten hadden wal een yts andere kalender as wattet wy nu hebbet, düs et sol manks misskyn yts verskilled hebben. Der wördden et ende van et [[zoemer|summer]] evyred en et [[winter]] in elüded. Groute vüren wördden der disse åvend an estöäken. 
 
-Vöär de kelten begünden alles vanuut et düüster. Ear dagen begünden as de sünne under güng. So ouk begünden ear nye jår by Samhain, want nu bint de dagen up syn körtenst. Up disse åvend gelöyveden de kelten, asset wy de myten nåleast, dat de geystenwearld en unse wearld et körtst by mekander was, düs was et heyl makkelik ümme med de douden te pråten en ear te huus een stool te geaven. 
+Vöär de kelten begünden alles vanuut et düüster. Ear dagen begünden as de sünne under güng. So ouk begünden ear nye jår by Samhain, want nu bint de dagen up syn körtenst. Up disse åvend gelöyvden de kelten, asset wy de myten nåleaset, dat de geystenwearld en unse wearld et körtst by mekander was, düs was et heyl makkelik ümme med de douden te pråten en ear te huus een stool te geaven. 
 
 [[Halloween]] stamt of van disse feestdag. De katolike feesten [[Allerheiligen]] en [[Allerselen]] bint, onder andere, in estelled ümme een christelike varsy van dit heidenske feest te geaven. Wårümme as Samhain een feest vöär de douden was. Nudaagske [[Wikka]] en [[nye heidenen]] vyret Samhain ouk wear.
 
