*Empty MediaWiki Message*

--- a/Brummen.mw
+++ b/Brummen.mw
@@ -24,7 +24,7 @@ webstee = [http://www.brummen.nl/ www.brummen.nl ] |
 t Gebied van de gemeente Brummen kent al ruum 2.000 jaor bewoners, mar aover die oldste geschiedenisse is niet zovölle bekend. De name ''Brummen'' duukt veur t eerst op op n akte waorin n antal landeriejen eschonken worden van graaf [[Wrachari]] an [[Liudger]]. In die akte hebt ze t aover ''Brimnum'', in [[794]]. Dit jaortal wörd gebruukt as de ontstaonsdaotum van de gemeente, zodoende was [[1994]] n feestjaor waorin t 1200-jaorig bestaon groos evierd wier. In [[1865]] was de spoorwegverbinding klaor, töt die tied kwammen postwagens en postkoetsen vake bie Brummen an, via de weg van [[Arnem]] naor [[Zutfent]]. Veur [[1800]] was Brummen de heufdplaatse van t [[Veluwe|Veluwse]] ambt Brummen, dat beston uut de [[karspel]]s Brummen en [[Hall]]. Sommigen zeggen ok wel dat de name 'Brummen' van t woord [[brummel]] kömp (n soort vrucht), der gruuien in de umgeving van Brummen inderdaod naor völle brummels.
 
 ==Aoverige kernen==
-[[Broek (Brummen)|Broek]], [[Kortenoever]], [[Eerbeek]], [[Empe]], [[Hall (Gelderland)|Hall]], [[Leuvenheim]], [[Oeken]], [[Tonden]] en [[Veurstonden]].
+[[Broek (Brummen)|Broek]], [[Kortenoever]], [[Eerbeek]], [[Empe]], [[Hall (Gelderland)|Hall]], [[Leuvenheim]], [[Oeken]], [[Tonden]] en [[Voorstonden]].
 
 ==De meuite weerd um te bekieken==
 In Brummen staon de twee grootste [[mammoetboom|mammoetbomen]] van Nederland.<ref>[http://users.telenet.be/sequoiadendron/nl/loc/records/nederland.html Grootste mammoetboom van Nederland]</ref>
