*Empty MediaWiki Message*

--- a/Lieste_van_plaatsen_in_Gelderland.mw
+++ b/Lieste_van_plaatsen_in_Gelderland.mw
@@ -878,7 +878,7 @@ __NOTOC__
 |width="50%" valign="top"|
 
 *[[Veur-Drempt]] (darp in de gemeente [[Bronckhorst]])
-*[[Veurstonden]] (buurtschap in de gemeente [[Brummen]])
+*[[Voorstonden]] (buurtschap in de gemeente [[Brummen]])
 *[[Vierakker]] (darp in de gemeente [[Bronckhorst]])
 *[[Vierhouten]] (darp in de gemeente [[Nunspeet]])
 *[[t Villeken]] (buurtschap in de gemeente [[Aalten]])
