*Empty MediaWiki Message*

--- a/Coldenhove.mw
+++ b/Coldenhove.mw
@@ -1,7 +1,7 @@
-'''Koldenhove''' ([[Nederlaans|Nederlands]]: ''Coldenhove'') is n [[buurtschap]] in de gemeente [[Brummen]], in de [[Nederlaand|Nederlandse]] [[pervincie|provincie]] [[Gelderlaand|Gelderland]]. De buurtschap ligt ten zuudwesten van [[Eerbeek]].
+'''Coldenhove''' is n [[buurtschap]] in de gemeente [[Brummen]], in de [[Nederlaand|Nederlandse]] [[pervincie|provincie]] [[Gelderlaand|Gelderland]]. De buurtschap ligt ten zuudwesten van [[Eerbeek]].
 
 == Uutgaonde verwiezing ==
-* [https://www.brummen.nl/over-de-gemeente/dorpen-en-buurtschappen/#c45039 Koldenhove op de offisiële webstae van de gemeente Brummen]
+* [https://www.brummen.nl/over-de-gemeente/dorpen-en-buurtschappen/#c45039 Coldenhove op de officiële webstae van de gemeente Brummen]
 
 {{Brummen}}
 {{Dialekt|ovel|Brummen|Algemene Nedersaksiese Schriefwieze}}
