*Empty MediaWiki Message*

--- a/Cortenoever.mw
+++ b/Cortenoever.mw
@@ -1,9 +1,9 @@
-'''Kortenoever''' ([[Nederlaands|Nederlands]]: ''Cortenoever'') is n [[buurtschap]] in de [[gemiente (bestuur)|gemeente]] [[Brummen]], in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderlaand|Gelderland]].
+'''Cortenoever''' is n [[buurtschap]] in de [[gemiente (bestuur)|gemeente]] [[Brummen]], in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderlaand|Gelderland]].
 
-t Landelike Kortenoever ligt in n [[meänder]] van de [[Iessel]], in n natuurgebied van [[Staotsbosbeheer]]. t Gebied is een van de riekste [[uterweerd]]en van Nederland. De Iessel scheidt de buurtschap van de stad [[Zutfent]]. Ten westen van Kortenoever ligt [[Brummen]], de plaatse waor de inwoners van Kortenoever veur veurzieningen op ericht bint.
+t Landelike Cortenoever ligt in n [[meänder]] van de [[Iessel]], in n natuurgebied van [[Staotsbosbeheer]]. t Gebied is een van de riekste [[uterweerd]]en van Nederland. De Iessel scheidt de buurtschap van de stad [[Zutfent]]. Ten westen van Cortenoever ligt [[Brummen]], de plaatse waor de inwoners van Cortenoever veur veurzieningen op ericht bint.
 
 == Uutgaonde verwiezing ==
-* [https://www.brummen.nl/over-de-gemeente/dorpen-en-buurtschappen/#c45031 Kortenoever op de offisiële webstee van de gemeente Brummen]
+* [https://www.brummen.nl/over-de-gemeente/dorpen-en-buurtschappen/#c45031 Cortenoever op de officiële webstee van de gemeente Brummen]
 
 {{Brummen}}
 {{Dialekt|ovel|Brummen|Algemene Nedersaksiese Schriefwieze}}
