--- a/Ekspressionisme.mw
+++ b/Ekspressionisme.mw
@@ -2,7 +2,7 @@ Et '''ekspressionisme''' (van [[latien|latyn]]: expressio, ''et uutdrükken'') w
 
 Belangryk was dat wanneyr as de künstenaar når een bepåld underwarp of platyn kekt, dat hee dår wat by vöölt en dát dan ofbealden döäd. Vake probeerden sy vanuut et underbewüsten te warken, kyken wat et underbewüsten in hüm hevt. Dit idey kümt van de psycholoog [[Sigmund Freud]], den sea dat et groutste deyl van de gedachtenisse neet bewüst geyt. Dit kün y teagenoaver et [[impressionisme]] setten. Wårümme as et impressionisme jüüste når de wearld üm hüm hen kekt en dát ofbeald, so as ho et sünnelicht düt byvöärbeyld. Ümdat ekspressionisten alleyne mar in ear koppen keaken, wördden de bealden dee as sy uut de 'echte' wearld skilderden, heyl anders is as de wearld wat y seen künnet. Landskappen kwamen der uut te seen as velle klöörvlekken nöäst mekare, mensken begünden te sweaven, en meyr van dee neet-echte dinge. Vanuut et ekspressionisme hevt dan later ouk et abstrakt skilderen ekoamen.
 
-Achteruut ekeaken bint [[Vincent van Gogh]] en den noordsken skilder [[Edvard Munch]] de eyrste lüde dee as skilderden uut et gevööl.
+Achteruut ekeaken bint [[Vincent van Gogh]] en den noordsken skilder [[Edvard Munch]] de eyrste lüde dee as uut et gevööl skilderden.
 
 Et ekspressionisme in [[Fraankriek|Frankryk]] wördt vandage an den dag [[fauvisme]] enöömd. Wårvan eyne van de bekendsten [[Henri Matisse]] is. Ouk in [[Duutslaand|Düütskland]] bint der twey gruppen ewesd dee belangryk waren vöär de strouming:  [[Der Blaue Reiter]] en [[Die Brücke]]. Nådat de gröninger skilder [[Jan Wiegers]] in Düütskland skilderwark van Die Brücke eseen hadde, brachten hee disse skilderstyl med når syn net nye skildersgruup in Gröningen. So bint de upsetters van [[De Ploog (Gröningen)|De Ploog]] ouk as ekspressionisten gån skilderen. 
 
