*Empty MediaWiki Message*

--- a/AKI_Artez.mw
+++ b/AKI_Artez.mw
@@ -1,5 +1,5 @@
 [[Bestaand:AKI Artez 2016.jpg|thumb|right|290px|AKI Artez 2016]]
-'''AKI (Academie voor Art & Design)''' is een [[kunstakedemie|künstakademy]] in [[Eanske|Enske]]. Et wördden up-eset döär tekstylfabrikanten in 1946 as de ''Academie voor Kunst en Industrie'', of-ekört ''AKI''. Disse akademy wördden up-eset ümme de achterstand in künst, kulture en houger underwys in [[Twente]] by te halen en  ümme untwarpers te leaveren an de [[teksielindustrie|tekstylindustry]] hyrsoot. Nå jåren as künstnyverheidsskole edräied te hebben güng et in de jåren 60. de kante van de [[moderne künst]] up an. de AKI steyt wyd bekend as de meyst vrye en eigenwyse künstakedemy van [[Nederlaand|Neaderland]]. Rechtervoort is et underdeyle van [[ArtEZ]] hougeskole vöär de künsten, mar süt sichsülve noch altyd as een appartstånde en kleine akademy. Et hevt verskillende lokatys ehad binnen de stad Enske. Mar sit nudaags (sünds 2013) up et olde [[teksielfebriek|tekstylfabryk]] [[Tetem II]], in de wyke [[Roombeek]]. Döärdat Enske kört by de grense med [[Duutslaand|Düütskland]] ligt, hevt de AKI ouk vöäle düütske studenten, mar ouk studenten van andere landen ofkumstig.
+'''AKI (Academie voor Art & Design)''' is een [[kunstakedemie|künstakademy]] in [[Eanske|Enske]]. Et wördden up-eset döär tekstylfabrikanten in 1946 as de ''Academie voor Kunst en Industrie'', of-ekört ''AKI''. Disse akademy wördden up-eset ümme de achterstand in künst, kulture en houger underwys in [[Twente]] by te halen en  ümme untwarpers te leaveren an de [[teksielindustrie|tekstylindustry]] hyrsoot. Nå jåren as künstnyverheidsskole edräied te hebben güng et in de jåren 60. de kante van de [[moderne künst]] up an. de AKI steyt wyd bekend as de meyst vrye en eigenwyse künstakedemy van [[Nederlaand|Neaderland]]. Rechtervoort is et underdeyle van [[ArtEZ]] hougeskole vöär de künsten, mar süt sichsülve noch altyd as een appartstånde en kleine akademy. Et hevt verskillende steades ehad in de stad Enske. Mar sit nudaags (sünds 2013) up et olde [[teksielfebriek|tekstylfabryk]] [[Tetem II]], in de wyke [[Roombeek]]. Döärdat Enske kört by de grense med [[Duutslaand|Düütskland]] ligt, hevt de AKI ouk vöäle düütske studenten, mar ouk studenten van andere landen ofkumstig.
 
 ==Upleiding==
 Et eyrste jår gå y pas in as y de vöärupleiding en/of de tolåtingseksamen ehaled hebt. Hyrmed test se u of as y wal waerdig genog bint ümme dår te möägen leyren. As y et ehaald hebt anenöämen te wörden, dan kryg y eyrst een jår heyl algemeyn up de richting wat y eköäsen hebbed. Up de Aki heb y de köäse tüsken [[ACD]] en [[Beeldende keunst|Fine Art]]. Fine Art besteyt wear tüsken [[Skeelderskeunst|Painting]] en [[ruumtlike kunst|Sculpture]]. Vöär anvang van et eyrste jår kees y dår al vöär. Med et tweyde jår Fine Art heb y eköäsen óf skilderen óf skulptuur. Dan eigenlik begünt uwen upleiding pas echt. Dan kryg y uwen eigen warksteade aneweasen  en gå y an de gang med uwen eigen untwikkeling as vry denkend- en doond- künstenmaker. Uwen eigen gedachtens en bealdspråke ståt der by in et middenpünte. De docenten wat der in de runde loupet bint altyd sülv ouk ervåren en 'evestigde' künstenaars, den u dår alleyne mar van hülpe bint (as råd) vöär uw eigen untwikkeling as künstenmaker.
