*Empty MediaWiki Message*

--- a/Marjolein_Rothman.mw
+++ b/Marjolein_Rothman.mw
@@ -1,6 +1,6 @@
 ''' Marjolein Rothman''' (15 mei 1974, [[Eibarge|Eibargen]]) is 'n [[Nederlaands|Nederlaanse]] [[keunst|kunstskild'resse]], op-ewassen in 'n [[Achterhoek]]. 
 
-In 1992 gung zi-j de kunstopleiding op [[AKI Artez|AKI]] in [[Eanske]] doen. Wat joaren later is 'e der van of-estudeerd. Doarnoa hef 'e zien heil ezöcht in de kunstweerld. Teagenswoordig woont 'e op [[Amsterdam]], en gef noedaags ok wat dagen lesse op AKI en [[HKU]].
+In 1992 gung zi-j de kunstopleiding op [[AKI Artez|AKI]] in [[Eanske]] doen. Wat joaren later is 'e der van of-estudeerd. Doarnoa hef 'e heur pad verder uut-ezet in de kunstweerld. Teagenswoordig woont 'e op [[Amsterdam]], en gef noedaags ok wat dagen lesse op AKI en [[HKU]].
 
 {{Dialekt|sdz}}
 
