/* Bekende leu oet Eibarge */

--- a/Eibarge.mw
+++ b/Eibarge.mw
@@ -36,7 +36,7 @@ Eibarge wöd in 1188 eneumd as de zelfstandige parochie Ecberghe. Ut heurden toe
 *[[Wim Izaks]], (1950) Beeldend Kunstenaar
 *[[Annie Borckink]], (1951), schaatsster
 *[[Menno ter Braak]], (1902) schrijver, essayist, cultuur- en literatuurcriticus
-*[[Marjolein Rothman]] (15 mei 1974) künstskilderesse
+*[[Marjolein Rothman]] (15 mei 1974) kunstskilderesse
 
 ==Verwiezingen==
 <references/>
