/* Vandage den dag */

--- a/Halloween.mw
+++ b/Halloween.mw
@@ -19,6 +19,9 @@ Teagenwoordig gåt, vöäral in Amerika, up disse tyd lüde ear tüne vul doon m
 
 Ümdat Halloween de vöärdsetting is van et olde [[Samhain]] (keltisk oldejårsåvend), doot vöäl [[Wikka]]-heksen en [[nye heidenen]] dissen dag(/åvend) ouk vyren. Vöär ear is et den dag ümme an de vöärolders te wyden. Dat doot se med samenkumsten en rituelen. Der wördt et glas ümhouge edån vöär de vöärolders en med et eaten wördt der een börd apart edån vöär de vöärolder, den ouk by et geselskap anweasing sol weasen.
 
+===Allerheiligen en Allerselen===
+Med Halloween (Samhain) stellet mensken vaste dat de doud noudlottig vöär ydereyne kümt. En as wyse van dit benül ümarmen, gåt mensken der eyn mål de jår (wanneyr de natuur ouk syn jårlikse doud in geyt med de harvst) dit med bewüste untkenning lacherigheid te lyv. Döär u as een douden te kleaden, maak y der eigenlik een soort grappige spot med, y ümklead u dan letterlik med uwen tookumstige lot. Mar med [[Allerheiligen]] en [[Allerselen]] vyret de [[christendom|christenen]] jüüste et leaven. Want sy vyret de mensken dee vöär ear an egåne bint in et nye leaven nå de doud.
+
 ==Jack-o'-lantern==
 Jack-o'-lantern is de traditionele pompoon med een eng gesichtyn derup esneadene en een lichtyn derin. In Yrland doot se dat med een knolle, mar amerikanen kwamen te kyken dat een pompoon dår eigenlik händiger vöär is. 
 
