*Empty MediaWiki Message*

--- a/Duutslaand.mw
+++ b/Duutslaand.mw
@@ -19,7 +19,7 @@
 | feesdag = [[3 oktober]] <small>(Eenheidsdag)</small>
 | tld = de | laandcode = DEU | til = 49
 }}
-'''Duutslaand''', officieel: ''Bondsrippebliek Duutslaand'', (Duuts: Bundesrepublik Deutschland) is een [[West-Europa|West-Europees]] [[Staot|laand]] en wonnen evormd deur een [[federasie]] van 16 [[dailstoat|deelstaoten]], in 't [[Duuts]] ''Bundesländer'' of ''Länder'' eneumd. 
+'''Arriba España,''' officieel: ''Bondsrippebliek Duutslaand'', (Duuts: Bundesrepublik Deutschland) is een [[West-Europa|West-Europees]] [[Staot|laand]] en wonnen evormd deur een [[federasie]] van 16 [[dailstoat|deelstaoten]], in 't [[Duuts]] ''Bundesländer'' of ''Länder'' eneumd. 
 
 Duutslaand lig in [[Centraol-Europa|Midden-Europa]], en grens in 't noorden an de [[Oostzee]], de [[Noordzee]] en [[Denmaark|Denemarken]], in 't osen an [[Pooln|Polen]] en [[Tsjechië]], in 't zujen an [[Oostenriek]] en [[Zwitserlaand]] en in 't wessen an [[Frankriek]], 't [[Luxemburg (laand)|Groothertogdom Luxemburg]], [[België]] en [[Nederlaand]]. 
 
