--- a/Båke.mw
+++ b/Båke.mw
@@ -21,7 +21,7 @@ Et is gebruuk üm med [[buurtschop|nåberskappen]] nen wedstryd te holden wee et
 
 [[2011]] haalden de [[noaberskop|nåberskap]] [[Diekerhook (Riesn-Hooltn)|Dykerhook]] et wearldrekord vöär de båke med de meyste inhold: 4907 kuub. Dit was möägelik döärdät båkes van andere buurskappen in de büürte neet anestöäken mochten worden, ümdät et te dröyge was en düs gevår vöär buskbranden.
 
-In [[2012]] maakn Splo bekeand wier ne wearldrekordpoging te doon. t werd ne boake van 45,98 meter <ref>[http://www.volkskrant.nl/vk/nl/2690/Opmerkelijk/article/detail/3237232/2012/04/06/Wereldrecord-Espelo-bouwt-paasvuur-van-45-98-meter-hoog.dhtml Volkskrant oaver record]</ref> hoge met ne inhoold van 9174 kuub. Hier woarket alle Sploder noaberskopn an met.<ref>[http://www.radio350.nl/page/regionieuws/4625/espelo_bouwt_het_grootste_paasvuur_ter_wereld Radio350.nl - Espelo bouwt het grootste paasvuur ter wereld.] 13 meart 2012.</ref>
+In [[2012]] maakten Splo bekend wear ne wearldrekordpoging te doon. Et werd ne båke van 45,98 meater <ref>[http://www.volkskrant.nl/vk/nl/2690/Opmerkelijk/article/detail/3237232/2012/04/06/Wereldrecord-Espelo-bouwt-paasvuur-van-45-98-meter-hoog.dhtml Volkskrant oaver record]</ref> hoge met ne inhoold van 9174 kuub. Hier woarket alle Sploder noaberskopn an met.<ref>[http://www.radio350.nl/page/regionieuws/4625/espelo_bouwt_het_grootste_paasvuur_ter_wereld Radio350.nl - Espelo bouwt het grootste paasvuur ter wereld.] 13 meart 2012.</ref>
 
 ==Riemken==
 '''Poasken'''
