--- a/Båke.mw
+++ b/Båke.mw
@@ -23,7 +23,7 @@ Et is gebruuk üm med [[buurtschop|nåberskappen]] nen wedstryd te holden wee et
 
 In [[2012]] maakten Splo bekend wear ne wearldrekordpoging te doon. Et werd ne båke van 45,98 meater <ref>[http://www.volkskrant.nl/vk/nl/2690/Opmerkelijk/article/detail/3237232/2012/04/06/Wereldrecord-Espelo-bouwt-paasvuur-van-45-98-meter-hoog.dhtml Volkskrant oaver record]</ref> hoge met ne inhoold van 9174 kuub. Hier woarket alle Sploder noaberskopn an met.<ref>[http://www.radio350.nl/page/regionieuws/4625/espelo_bouwt_het_grootste_paasvuur_ter_wereld Radio350.nl - Espelo bouwt het grootste paasvuur ter wereld.] 13 meart 2012.</ref>
 
-==Riemken==
+==Rymken==
 '''Poasken'''
 
 <poem style="margin-left:2em; font-style:italic">
