--- a/Båke.mw
+++ b/Båke.mw
@@ -60,11 +60,14 @@ Det de Leante hef ewunn!
 
 :Martin ter Denge, 2007
 
-==Neersassies==
-* [[Grunnegs]]: 
-**''Poas(ke)vuur'' (t gebeuren)
-**''Poasbult'', ''poasboaken'' (t ding zulf; boaken is ien t Grunnegs n aalgemain woord veur n brandende stoapel)
-* [[Achterhooks]]: ''Poasvuur(bult)''
+==Neadersassisk==
+* [[Grunnegs|Grönningsl]]: 
+**''Poas(ke)vuur'' (et geböären)
+**''Poasbult'', ''poasboaken'' (et ding sülv; båken is in 't Grünnigs 'n algemayn woord vöär een brandende ståpel)
+* [[Achterhooks|Achterhooksk]]: ''Poasvuur(bult)''
+* [[Sallaans|Sallandsk]]: 
+**''Poasbult'' (de bülte), 
+**''Poasvuur'' (as et an steyt)
 
 ==Verwiezingn==
 <references/>
