--- a/Båke.mw
+++ b/Båke.mw
@@ -67,7 +67,7 @@ Det de Leante hef ewunn!
 * [[Achterhooks|Achterhooksk]]: ''Poasvuur(bult)''
 * [[Sallaans|Sallandsk]]: 
 **''Poasbult'' (de bülte), 
-**''Poasvuur'' (as et an steyt)
+**''Poasvuur'' (de vlammen wat et gevt)
 
 ==Verwiezingn==
 <references/>
