--- a/Båke.mw
+++ b/Båke.mw
@@ -61,7 +61,7 @@ Det de Leante hef ewunn!
 :Martin ter Denge, 2007
 
 ==Neadersassisk==
-* [[Grunnegs|Grönningsl]]: 
+* [[Grunnegs|Grönningsk]]: 
 **''Poas(ke)vuur'' (et geböären)
 **''Poasbult'', ''poasboaken'' (et ding sülv; båken is in 't Grünnigs 'n algemayn woord vöär een brandende ståpel)
 * [[Achterhooks|Achterhooksk]]: ''Poasvuur(bult)''
