--- a/Båke.mw
+++ b/Båke.mw
@@ -63,7 +63,7 @@ Det de Leante hef ewunn!
 ==Neadersassisk==
 * [[Grunnegs|Grönningsk]]: 
 **''Poas(ke)vuur'' (et geböären)
-**''Poasbult'', ''poasboaken'' (et ding sülv; båken is in 't Grünnigs 'n algemayn woord vöär een brandende ståpel)
+**''Poasbult'', ''poasboaken'' (et ding sülv; båken is in et Grönnigs een algemayn woord vöär een brandende ståpel)
 * [[Achterhooks|Achterhooksk]]: ''Poasvuur(bult)''
 * [[Sallaans|Sallandsk]]: 
 **''Poasbult'' (de bülte), 
