--- a/Båke.mw
+++ b/Båke.mw
@@ -69,7 +69,7 @@ Det de Leante hef ewunn!
 **''Poasbult'' (de bülte), 
 **''Poasvuur'' (de vlammen wat et gevt)
 
-==Verwiezingn==
+==Verwysingen==
 <references/>
 
 {{Dia|Disse pagina is eskreewn in t [[Riesns]]}}
