--- a/Nissan_Leaf.mw
+++ b/Nissan_Leaf.mw
@@ -1,10 +1,10 @@
-[[Bestaand:2017 Nissan LEAF (ZE0 MY17) hatchback (2018-11-02) 01.jpg|duum|1e generoatsie Nissan Leaf]]
-[[Bestaand:2018 Nissan Leaf 2.Zero Front.jpg|duum|Akkupakket 1e generoatsie Leaf]]
+[[Bestaand::2017 Nissan LEAF (ZE0 MY17) hatchback (2018-11-02) 01.jpg|duum|1e generoatsie Nissan Leaf]]
+[[Bestaand:Nissan Leaf 012.JPG|duum|Akkupakket 1e generoatsie Leaf]]
 De '''Leaf''' is n elektrische auto van de Japanse fabrikant '''Nissan'''. De noam Leaf is n òfkörten van ''Leading, Environmentally friendly, Affordable, Family car''. De viefdeurs gezinswoagen kwam in december 2010 op d'Europese maarkt en was sunt meert 2011 in Nederland leverboar. In september 2017 het Nissan de twijde generoatsie Leaf prezenteerd, dij vanòf jannewoarie 2018 in Nederland leverboar wordt.
 
 == Techniek ==
 De Nissan Leaf n Lithium-Ion akku's dij oploaden worden kinnen mit twij aansloetens aan de veurkant van d'auto. Ain aansloeten is veur n normoal stopkontakt, d'aander aansloeten is veur t snelloaden,
-[[Bestaand:Nissan LEAF G (ZAA-ZE1).jpg|duum|2e generoatsie Nissan Leaf]]
+[[Bestaand:2018 Nissan Leaf Tekna Front.jpg|duum|2e generoatsie Nissan Leaf]]
 Tot 2016 haar d'eerste generoatsie n akkupakket van 24 kWh, woarmit n òfstand van 160 km (volgens NEDC-testcyclus) berekt worden kon. Begun 2016 kwam der n 30kWh-variaant bie mit n berek van 250 km (NEDC). t 2017-medel het n 40 kWh-pakket mit n berek van 378 km (NEDC). Doarnoast zel n duurdere oetvoeren kommen mit n staarkere motor en akkupakket mit nog meer berek. d'Elektromotor drift de veurroadens aan en t akkupakket zit in de woagenbodem.
 
 == Nijlootjes 2013 ==
