--- a/Båke.mw
+++ b/Båke.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Mensen bekijken paasvuur in Eibergen.jpg|thumb|300px|Leu beent saamn bie ne boake in [[Eibargen|Eiboargn]] (2006)]]
+[[Ofbeelding:Mensen bekijken paasvuur in Eibergen.jpg|thumb|300px|Lüde bint samen by ne båke in [[Eibargen|Eibargen]] (2006)]]
 Up [[Poaske|Eyrste Påskedag]] wördt in een grout noord-westerlik gedeylte van [[Europa (continent)|Europa]] båkes anestöäken. ne '''Båke''' is een grout vüür, wat wördt ebrand üm de köälte en et düüster van de [[winter]] te verdryven, en den koamst van de [[lente]] te vyren, of üm te vyren dät Lente et van Winter ewünnen hevt.<br />
 De noordgrense wår at dit gebruuk vöärköämt löpt döär [[Denemarken|Denemårken]], de süüdgrense döär [[Zwitserlaand|Switserland]] en [[Oostenriek|Oustenryk]]. De westergrense löpt döär [[Nederlaand|Neaderland]] oaver de lyne den et [[Nedersaksisch|neadersassiske]] gedeylte underskeid van et [[Nederland|hollandske]] deyl, en de oustergrense löpt döär et [[Duutslaand|düütske]] [[Hartz]]-gebeed.
 
