--- a/Båke.mw
+++ b/Båke.mw
@@ -5,7 +5,7 @@ De noordgrense wår at dit gebruuk vöärköämt löpt döär [[Denemarken|Denem
 ==Geskydenis==
 [[Ofbeelding:Paasvuur.jpg|thumb|280px|ne Båke by [[Onstwedde]] up [[Poaske|Tweyde Påskedag]] 2004]]
 Dät is een old [[Germanen|germaansk]] gebruuk wat syn oorsprung noch vöär den koamst van et [[Kristendom|Christendom]] hevt. Wårskynlik gelöyvden de germanen dät et vöär öär ouk beskårmen teagen kwåde geysten, en was et vöär ne verseakerige vöär vrüchtbårheid. De aske wat van de båkes köämen, wördden oaver et land verdeyled, wat good was vöär de grund.
-De christenen probeerden et heidense gebruuk der uut te krygen, maer dät is öär neet elükd, maer de beleaving van ne båke is vake neet maer med de germanen verböänden. De [[Rooms-Katholieke Karke|rooms-katoliken]] hebbet et gebruuk verdraeid en der een roomsk feest van emaked.
+De christenen probeerden et heidenske gebruuk der uut te krygen, maer dät is öär neet elükked, maer de beleaving van ne båke is vake neet maer med de germanen verböänden. De [[Rooms-Katholieke Karke|rooms-katoliken]] hebbet et gebruuk verdraeied en der een roomsk feest van emaked.
 
 In Twente wördt dit gebruuk ''båkebranden'' enöömd. De lätste jåren bint der strenge miliövöärskrivten an verböänden.
 
