*Empty MediaWiki Message*

--- a/Zwarten_Piet.mw
+++ b/Zwarten_Piet.mw
@@ -1,4 +1,4 @@
-'''Zwarten Peet'' of '''Peet''' is in [[Nederlaand|Neadeland]] en [[Belgie]] et hülpyn van [[Sunterkloas|Sünterklås]]. Volgens et verhaal düt hee med et sünterklåsfeest kadogyns en snööp an de kinder geaven. In de eywen is syn uuterlik en take al verskeidene målen veranderd, van buuman en knechte töt spöälske kindervreend. En teagenwoordig bint der sülvs lüde dee hüm een racistisk stereotype vindet.
+'''Zwarten Peet''' of '''Peet''' is in [[Nederlaand|Neadeland]] en [[Belgie]] et hülpyn van [[Sunterkloas|Sünterklås]]. Volgens et verhaal düt hee med et sünterklåsfeest kadogyns en snööp an de kinder geaven. In de eywen is syn uuterlik en take al verskeidene målen veranderd, van buuman en knechte töt spöälske kindervreend. En teagenwoordig bint der sülvs lüde dee hüm een racistisk stereotype vindet.
 
 ===Uuterlik en take===
 
