*Empty MediaWiki Message*

--- a/Vöäruutgangsgelöyv.mw
+++ b/Vöäruutgangsgelöyv.mw
@@ -1,4 +1,4 @@
-Et '''vöäruutgangsgelöyv''' is et idey dat de menskheid in de tookumst steads better sol wörden. De hoape dat der ooit een tyd kümt wår as alles good is. De untwikkeling van de technology en de weatenskop sal uns dårmed hülpen. Disse gedachtenisse hevt syn oorsprüng in de [[De Verlechting|verlichting]]styd. So as [[Kristendom|christenen]] gelöyvet dat der in de geskydenisse een rechte lyne löpt: van begün (sündeval) töt ende (heamel up aerde). (dit teagenoaver et wearldbekiek dat [[Leavenskrinkloup (volksgelöyv)|alles in runden löpt]]) De verlichtingslüde güngen hüm up et denken en undersöken an setten. Wårdöär et idey kwamt dat de menske sülv syn leaven bepålen kan. Van den kearl houche in den heamel kün y et ouk neet altyd verwachten. Düs wy, mensken, mossen unse tookumst sülven in handen nemmen. So kwamt der hoape vöär de tookumst, hoape up een bettere werld. Vöäruutgang düs. Asset wy mar uns up de weatenskop to vertrouwed. Wys nådenken kan de verskillen tüsken de mensken uplössen. So geyt de wenske. 
+Et '''vöäruutgangsgelöyv''' is et idey dat de menskheid in de tookumst steads beater sol wörden. De hoape dat der ooit een tyd kümt wår as alles good is. De untwikkeling van de technology en de weatenskop sal uns dårmed hülpen. Disse gedachtenisse hevt syn oorsprüng in de [[De Verlechting|verlichting]]styd. So as [[Kristendom|christenen]] gelöyvet dat der in de geskydenisse een rechte lyne löpt: van begün (sündeval) töt ende (heamel up aerde). (dit teagenoaver et wearldbekiek dat [[Leavenskrinkloup (volksgelöyv)|alles in runden löpt]]) De verlichtingslüde güngen hüm up et denken en undersöken an setten. Wårdöär et idey kwamt dat de menske sülv syn leaven bepålen kan. Van den kearl houge in den heamel kün y et ouk neet altyd verwachten. Düs wy, mensken, mossen unse tookumst sülven in handen neamen. So kwamt der hoape vöär de tookumst, hoape up een beatere werld. Vöäruutgang düs. Asset wy mar uns up de weatenskop to vertrouwed. Wys nådenken kan de verskillen tüsken de mensken uplössen. So geyt de wenske. 
 
 {{Dialekt|sdz|[[Vechte|'t Vechtdal]]|ANS}}
 [[Kategorie:Filosofie]]
