*Empty MediaWiki Message*

--- a/Ekspressionisme.mw
+++ b/Ekspressionisme.mw
@@ -1,6 +1,6 @@
 Et '''ekspressionisme''' (van [[latien|latyn]]: expressio, ''et uutdrükken'') was een ströyming in de künst. Den had syn höygtepunte rund 1905 töt 1940. In et ekspressionisme probeert de künstenaar syn gevölens uut te drükken med varve, musik of skryven. Sy gaven de echte wearld dan vake een heyl ander vöärkoamen. 
 
-Belangryk was dat wanneyr as de künstenaar når een bepåld underwarp of platyn kekt, dat hee dår wat by vöölt en dát dan ofbealden döäd. Vake probeerden sy vanuut et underbewüsten te warken, kyken wat et underbewüsten in hüm hevt. Dit idey kümt van de psycholoog [[Sigmund Freud]], den sea dat et groutste deyl van de gedachtenisse neet bewüst geyt. Dit kün y teagenoaver et [[impressionisme]] setten. Wårümme as et impressionisme jüüste når de wearld üm hüm hen kekt en dát ofbeald, so as ho et sünnelicht düt byvöärbeyld. Ümdat ekspressionisten alleyne mar in ear koppen keaken, wördden de bealden dee as sy uut de 'echte' wearld skilderden, heyl anders is as de wearld wat y seen künnet. Landskappen kwamen der uut te seen as velle klöörvlekken nöäst mekare, mensken begünden te sweaven, en meyr van dee neet-echte dinge. Vanuut et ekspressionisme hevt dan later ouk et abstrakt skilderen ekoamen.
+Belangryk was dat wanneyr as de künstenaar når een bepåld underwarp of platyn kekt, dat hee dår wat by vöölt en dát dan ofbealden döäd. Vake probeerden sy vanuut et underbewüsten te warken, kyken wat et underbewüsten in hüm hevt. Dit idey kümt van de psycholoog [[Sigmund Freud]], den sea dat y van et groutste deyl van uwen gedachtenisse geyn benül hebt. Dit kün y teagenoaver et [[impressionisme]] setten. Wårümme as et impressionisme jüüste når de wearld üm hüm hen kekt en dát ofbeald, so as ho et sünnelicht düt byvöärbeyld. Ümdat ekspressionisten alleyne mar in ear koppen keaken, wördden de bealden dee as sy uut de 'echte' wearld skilderden, heyl anders is as de wearld wat y seen künnet. Landskappen kwamen der uut te seen as velle klöörvlekken nöäst mekare, mensken begünden te sweaven, en meyr van dee neet-echte dinge. Vanuut et ekspressionisme hevt dan later ouk et abstrakt skilderen ekoamen.
 
 Achteruut ekeaken bint [[Vincent van Gogh]] en den noordsken skilder [[Edvard Munch]] de eyrste lüde dee as uut et gevööl skilderden.
 
