--- a/Nysassiske_Skryvwyse.mw
+++ b/Nysassiske_Skryvwyse.mw
@@ -222,7 +222,7 @@ In dialekten wår ē<sub>2</sub> esplitsed wördt, is vake vöär -r geyn sprake
 |-
 ! colspan="6" style="background-color:#f0fff0" | Westföälsk
 |-
-| Middendrentsk un süüddrentsk || /eː/ || /eː/, /ei/ || /eː/, /ei/, /iː/ || /ɛi/ || /eː/, /ei/, /iː/
+| Middendrentsk un süüddrentsk || /eː/ || /eː/ || /eː/, /ei/, /iː/ || /ɛi/ || /eː/, /ei/, /iː/
 |-
 | Stellingwarvsk  || /eː/ || /eː/ || /iː/ || /ɛi/ || /iː/
 |-
