/* De tekse */Type fout gecorrigeerd

--- a/Wilhelmus.mw
+++ b/Wilhelmus.mw
@@ -10,7 +10,7 @@
 ! |
 Tekse zoas e noen is:
 ! |
-Oorspronkelijke tekse:
+Oorspronkelijke tekse:njjnjnjjnjnjn
 |-----
 |
 '''Eerste couplet'''<br />
