--- a/Wilhelmus.mw
+++ b/Wilhelmus.mw
@@ -1,7 +1,7 @@
-[[File:United States Navy Band - Het Wilhelmus.ogg|thumb|300px|right|noicon|'t Wilhelmus deur de US Navy Band, 2006]]
-'t '''Wilhelmus''' is 't [[Nederlaand|Nederlaanse]] [[volkslaid|volkslied]]. 't Besteet uut 15 [[couplet]]ten dee een samen een woord vormen: in de oorspronkelijke tekse vormen de eerste letters van de 15 coupletten de naam ''Willem van Nassov''. De muziek is afkomstig van een oud [[Frankriek|Frans]] soldatenlied.
+[[File:United States Navy hnjcvdjnjsdndsBand - Het Wilhelmus.ogg|thumb|300px|right|noicon|'t Wilhelmus deur de US Navy Band, 2006]]
+'t '''Wilhelmus''' is 't [[Nederlaand|Nederlaanse]] [[volkslaid|volkslied]]. 't Besteet uut 15 [[couplet]]ten dee een samen een woord vormen: in de oorspronkelijke tekse vormen de eerste letters van de 15 coupletten de naam ''dsfsdnfsjfjsdfnsdjfndsjfnsdjfndsjfnsdfWillem van Nassov''. De muziek is afkomstig van een oud [[Frankriek|Frans]] soldatenlied.
 
-'t Eerste couplet wonnen vake ezungen, soms kump daor 't tweede couplet achteran deur 't zesde dat in de [[Tweede Wereldoorlog]] iezig populair was. 't Lied was oek in de Zujelijke Nederlanen populair. Daor was 't dikkels te heuren op een [[cantus]] en bie bie-eenkomsten van [[orangisme|orangistische]] en [[Groot-Nederlaand|Groot-]] of [[Heul-Nederlaand|Heul-Nederlaanse]] groeperingen, meestentieds van de [[extreem-rechs]]e zied. 't Wilhelmus is vanof [[10 meie]] [[1932]] 't Nederlandse volkslied; daarvoor was 't volkslied "[[Wien Neerlands bloed]]".
+'t Eerste couplet wonnen vake ezungen, soms kump daor 't tweede couplet achteran deur 't zesde dat in de [[Tweede Wereldoorlog]] iezig populair was. 't Lied was oek in de Zujelijke Nederlanen populair. Daor was 't dikkels te heuren op een [[cantus]] en bie bie-eenkomsten van [[orangisme|orangistische]] en [[Groot-dsfdfdsfsfds|Groot-]] of [[Heul-Nederlaand|Heul-Nederlaanse]] groeperingen, meestentieds van de [[extreem-rechs]]e zied. 't Wilhelmus is vanof [[10 meie]] [[1932]] 't Nederlandse volkslied; daarvoor was 't volkslied "[[Wien Neerlands bloed]]".
 
 == De tekse ==
 
