Nederlandse namen bent in 2009 kom te vervallen

--- a/Dantemediel.mw
+++ b/Dantemediel.mw
@@ -13,7 +13,7 @@
 | postkode = 9100-9114, 9269-9272, 9067
 | webstee = [http://www.dantumadiel.frl www.dantumadiel.frl]
 }}
-'''Dantemediel''' ([[Westlaauwers Frais|Fries]], officieel: ''Dantumadiel'', [[Nederlaands|Nederlaans]]: ''Dantumadeel'') is een [[gemiente (bestuur)|gemiente]] in de [[Pervincie|perveensie]] [[Frieslaand]]. De gemiente telt 19.017 inwoners (1 meie 2014, bron: CBS) en het een oppervlakte van 87 [[vierkaante kilometer|km²]] (waorvan 1,78 km² [[woater|waeter]])
+'''Dantemediel''' ([[Westlaauwers Frais|Fries]], officieel: ''Dantumadiel'') is een [[gemiente (bestuur)|gemiente]] in de [[Pervincie|perveensie]] [[Frieslaand]]. De gemiente telt 19.017 inwoners (1 meie 2014, bron: CBS) en het een oppervlakte van 87 [[vierkaante kilometer|km²]] (waorvan 1,78 km² [[woater|waeter]])
 
 ==Belangriekste plakken==
 De gemiente telt 11 officiële dörpen. De [[Westlaauwers Frais|Friese]] naemen bin sund 1 jannewaori 2009 de officiële.
