--- a/Germaanse_lotsbeduding.mw
+++ b/Germaanse_lotsbeduding.mw
@@ -12,9 +12,9 @@ Wat so yts beteakend as:
 ''So hevt et lot et uut-emeaten en emarkeyred.''
 
 ==Namen==
-Et lot wördden med verskillende namen an-edüded. By de [[Vikings|noorske]] stammen wördden et ''Örlög'' enömed (wat in et oldsassisk ''Urlagi'' is), wat een oldere varsy is van uns woord ''oorlog''. ''Oor'' is et sülvden as et vöärvoogsel ''oer-'', en ''log'' kümt van ''leggen'' of een ander woord vöär ''eyd''.
+Et lot wördden med verskillende namen an-edüded. By de [[Vikings|noorske]] stammen wördden et ''Örlög'' enömed (wat in et oldsassisk ''Urlagi'' is), wat een oldere varsyn is van uns woord ''oorlog''. ''Oor'' is et sülvden as et vöärvoogsel ''oer-'', en ''log'' kümt van ''leggen'' of een ander woord vöär ''eyd''.
 
-By de [[angelsaksen|angelsassen]] wördden et lot ''metod'' enömed, wat verwant an ''metten'' is. En by de sassen wördden et ''wurd'' enömed, wat an uns ''wörden'' en ''verdan'' körtby ligt.
+By de [[angelsaksen|angelsassen]] wördden et lot ''metod'' enömed, wat verwant an ''meaten'' is. En by de sassen wördden et ''wurd'' enömed, wår uns ''wörden'' en ''verdan'' körtby an ligget.
 
 ==Nae's==
 In de mytology van de noorske stammen wördden et lot dichterlik uutebeyled as dree vrouwlüde - de [[Nornen|Nae's]]. De eyrsten en oldsten het [[Urd]], dee er verleaden angevt. De tweyden en middelsten het [[Verdandi]], dee et heyden angevt. De darden en jungsten het [[Skuld]], dee de kunmende tyd angevt.
