--- a/Germaanse_lotsbeduding.mw
+++ b/Germaanse_lotsbeduding.mw
@@ -1,4 +1,4 @@
-'''Germaanske bedüding van et lot''' geyt der van ho as de [[germanen]] oaver et lot dachtten. By ear was et lot de hougste macht, wår as de wearld achter an löpt.
+'''De germaanske bedüding van et lot''' geyt der van ho as de [[germanen]] oaver et lot dachtten. By ear was et lot de hougste macht, wår as de wearld achter an löpt.
 
 ==Lot==
 De germanen vöölden sich ait edreaven döär yts wat de wearld düt leaven en starven. Dit stünden sülvs boaven de goden en de vöärolder. Alles wörd döär et lot bepåld. Y künt u der alleynig mar an underwarpen, want der underuut kummen kan geyneyne neet. In et bekende angelsassiske heldendicht [[Beowulf]] hevt et lot ouk een belangryke rolle.
